tests/fixtures/invalid/round_set_none.py
# Cannot call round() with Set[int], None
x = round({1, 2, 3}, None)
